--- a/home.css
+++ b/home.css
@@ -19,7 +19,7 @@ body{
     --cardtext: rgb(0, 215, 215);
     --backgrad: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4));
     --img: url(temp/zemlya-planeta-kosmos-6494.jpg);
-    --hbr: /*здесь нет цвета*/;
+    --hbr: transparent;
     height: 100vh;
     background-image: var(--backgrad), url(temp/zemlya-planeta-kosmos-6494.jpg);
     background-size: cover;
@@ -109,6 +109,8 @@ body{
     grid-area: textBlock;
     height: 50vh;
     margin-top: 30vh;
+    width: 80%;
+    margin-left: 10vh;
 }
 /* Стили для текста в текстовом блоке */
 
@@ -218,8 +220,10 @@ i{color: var(--contacts);}
         /* background-color: bisque; */
         grid-area: textBlock;
         height: 70vh;
-        margin-top: 30vh;
+        margin-top: 23vh;
         padding-right: 3vh;
+        margin-left: 7vh;
+        text-align: center;
     }
     .card1, .card2, .card3, .card4{
         border-radius: 15px;
@@ -234,6 +238,7 @@ i{color: var(--contacts);}
     .card1{
         background-image: url(temp/south\ ring.jpg);
         grid-area: card1;
+        margin-top: 7vh;
     }
     .card2{
         background-image: url(temp/comet.png);
@@ -348,9 +353,12 @@ i{color: var(--contacts);}
     .textBlock{
         /* background-color: bisque; */
         grid-area: textBlock;
+        width: 100%;
         height: 70vh;
-        margin-top: 23vh;
-        padding-right: 3vh;
+        margin-top: 20vh;
+        left: 0;
+        margin-left: 0;
+        text-align: center;
     }
     .card1, .card2, .card3, .card4{
         border-radius: 15px;
@@ -363,7 +371,7 @@ i{color: var(--contacts);}
         transition: 0.3s;
     }
     .card1{
-        margin-top: 5.5vh;
+        margin-top: 13vh;
         background-image: url(temp/south\ ring.jpg);
         grid-area: card1;
     }
